--- a/frontend/index.css
+++ b/frontend/index.css
@@ -22,6 +22,16 @@
     --accent-color: #344440;
   }
 }
+[data-theme="dark"] {
+  --text-color: #c1fbec;
+  --bg-color: #444444;
+  --accent-color: #344440;
+}
+[data-theme="light"] {
+  --text-color: #444444;
+  --bg-color: #fafafa;
+  --accent-color: #c1fbec;
+}
 
 body {
   margin: 0;
@@ -38,4 +48,31 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+.logo,
+.sun,
+.moon {
+  width: 1.5rem;
+  height: 1.5rem;
+  fill: var(--text-color);
+  opacity: 0.3;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.logo:hover,
+.sun:hover,
+.moon:hover {
+  opacity: 1;
+  -webkit-animation: float 1s linear infinite;
+  animation: float 1s linear infinite;
+}
+
+.theme-toggle {
+  border: 0;
+  outline: none;
+  background: none;
+  width: 1.5rem;
+  height: 1.5rem;
 }
