style: move theme toggle

--- a/frontend/components/ThemeToggle/ThemeToggle.module.css
+++ b/frontend/components/ThemeToggle/ThemeToggle.module.css
@@ -1,4 +1,7 @@
 .theme-toggle {
+  position: fixed;
+  inset-block-start: 2rem;
+  inset-inline-start: 2rem;
   border: 0;
   outline: none;
   background: none;
