--- a/frontend/components/CandidateForm/CandidateForm.module.css
+++ b/frontend/components/CandidateForm/CandidateForm.module.css
@@ -11,7 +11,6 @@
 
     input, select {
       width: 100%;
-      border: 3px solid var(--text-color);
     }
 
     &:has(.error) {
@@ -28,7 +27,8 @@
 
   footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
+    gap: 1rem;
     align-items: center;
   }
 }
