--- a/frontend/index.css
+++ b/frontend/index.css
@@ -64,24 +64,19 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
-    /* --white: #fefefe;
-  --text-color: #444444;
-  --bg-color: #fafafa;
-  --accent-color: #c1fbec;
-  --error-color: #ff0033; */
-
     --white: hsl(0, 0%, 100%);
-    --text-color: hsl(0, 0%, 27%);
-    --bg-color: hsl(0, 0%, 98%);
-    --accent-color: hsl(168, 80%, 82%);
-    --error-color: hsl(0, 100%, 50%);
+    --off-white: hsl(0, 0%, 98%);
+    --green: hsl(168, 80%, 82%);
+    --black: hsl(0, 0%, 27%);
+    --red: hsl(0, 100%, 50%);
+    --yellow: hsl(48, 100%, 67%);
+    --blue: hsl(204, 100%, 50%);
+    --error-color: var(--red);
 
-    --bg-color-hover: hsl(0, 0%, 88%);
-    --text-color-hover: hsl(0, 0%, 38%);
-    --accent-color-hover: hsl(168, 80%, 60%);
 
     --dialog-backdrop: rgba(44, 44, 44, 0.4);
-    --shadow: 0 0 24px 0px rgba(44, 44, 44, 0.4);
+    --shadow: 0 0 24px 0 rgba(44, 44, 44, 0.4);
+    --shadow-sm: 0 0 4px 0 hsl(168, 80%, 60%);
     --border-radius: 1rem;
 
     --font-size-xs: 0.75rem;
@@ -94,22 +89,23 @@
     --main-width: clamp(20em, 65ch, 100%);
   }
 
-  @media (prefers-color-scheme: light) {
-    :root {
-      --text-color: #c1fbec;
-      --bg-color: #444444;
-      --accent-color: #344440;
-    }
-  }
   [data-theme="dark"] {
-    --text-color: #c1fbec;
-    --bg-color: #444444;
-    --accent-color: #344440;
+    --text-color: var(--green);
+    --bg-color: var(--black);
+    --accent-color: var(--off-white);
+
+    --text-color-hover: hsl(168, 80%, 60%);
+    --accent-color-hover: hsl(0, 0%, 88%);
+    --bg-color-hover: hsl(0, 0%, 38%);
   }
   [data-theme="light"] {
-    --text-color: #444444;
-    --bg-color: #fafafa;
-    --accent-color: #c1fbec;
+    --text-color: var(--black);
+    --bg-color: var(--off-white);
+    --accent-color: var(--green);
+
+    --accent-color-hover: hsl(168, 80%, 60%);
+    --bg-color-hover: hsl(0, 0%, 88%);
+    --text-color-hover: hsl(0, 0%, 38%);
   }
 }
 
@@ -132,6 +128,11 @@
     gap: 2rem;
     width: var(--main-width);
   }
+
+  .list {
+    display: grid;
+    gap: 1rem;
+  }
 }
 
 @layer components {
@@ -142,6 +143,10 @@
 
     @media (min-width: 768px) {
       font-size: var(--font-size-xxl);
+    }
+
+    [data-theme="dark"] & {
+      color: var(--accent-color);
     }
   }
 
@@ -177,8 +182,8 @@
     &.primary {
       [data-theme="dark"] & {
         background-color: var(--text-color);
-        color: var(--accent-color);
-        border-color: var(--bg-color);
+        color: var(--bg-color);
+        border-color: var(--accent-color);
         &:hover {
           background-color: var(--text-color-hover);
         }
@@ -219,6 +224,6 @@
 
 @layer utils {
   .u-red {
-    color: var(--error-color);
+    color: var(--red);
   }
 }
